@@ -40,9 +40,13 @@
 function retval = strcmpi (s1, s2)
 
   if (nargin == 2)
-    ## Note that we don't use tolower here because we need to be able to
-    ## handle cell arrays of strings.
-    retval = strcmp (lower (s1), lower (s2));
+    if ((ischar(s1) || iscellstr(s1)) && (ischar(s2) || iscellstr(s2)))
+      ## Note that we don't use tolower here because we need to be able
+      ## to handle cell arrays of strings.
+      retval = strcmp (lower (s1), lower (s2));
+    else
+      retval = false;
+    endif
   else
     usage ("strcmpi (s1, s2)");
   endif
